<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_soil"
            android:checked="true"
            android:icon="@drawable/ic_soil"
            android:title="@string/nav_item_soil" />
        <item
            android:id="@+id/navigation_item_crop"
            android:checked="true"
            android:icon="@drawable/ic_crops"
            android:title="@string/nav_item_crop" />
        <item
            android:id="@+id/navigation_item_crop_suggestion"
            android:checked="true"
            android:icon="@drawable/ic_crops"
            android:title="@string/nav_item_crop_suggesstion" />
        <item
            android:id="@+id/navigation_item_history"
            android:checked="true"
            android:icon="@drawable/ic_illegal"
            android:title="@string/nav_item_history" />

        <item
            android:id="@+id/navigation_item_disaster"
            android:checked="true"
            android:icon="@drawable/ic_disaster"
            android:title="@string/nav_item_disaster" />
        <item
            android:id="@+id/navigation_item_newsfeed"
            android:checked="true"
            android:icon="@drawable/ic_newsfeed"
            android:title="@string/nav_item_news_feed" />

    </group>

</menu>